src/test/resources/typeSystemTestModels/valid/classes/ClassBoundErasuresAreDifferent.java
package typeSystemTestModels.valid.classes;

import java.util.ArrayList;
import java.util.List;
import java.lang.String;


public class ClassBoundErasuresAreDifferent<T extends List<String> & ArrayList<String>> {

}