src/test/resources/typeSystemTestModels/invalid/names/ClassValidSuperTypes.java
package typeSystemTestModels.invalid.names;

import java.io.Serializable;
import java.util.ArrayList;

public class ClassValidSuperTypes extends ArrayList<String, Integer> implements
    Serializable<String>{

}
